fix: release distributed cache runtime 5.7.3